@@ -10,6 +10,14 @@ Source0: %{name}-%{version}.tar.gz
 %description
 Cadence is a distributed, scalable, durable, and highly available orchestration engine to execute asynchronous long-running business logic in a scalable and resilient way
 
+%files
+/usr/bin/cadence
+/usr/bin/cadence-server
+/usr/bin/cadence-sql-tool
+/usr/share/cadence/migrations/
+%config /etc/cadence.yaml
+%config /etc/systemd/system/cadence.service
+
 %prep
 %setup -q
 
@@ -25,17 +33,9 @@ install -m 0644 cadence.service $RPM_BUILD_ROOT/etc/systemd/system/
 mkdir -p $RPM_BUILD_ROOT/usr/share/cadence/migrations/
 cp -rf cadence-migrations/ $RPM_BUILD_ROOT/usr/share/cadence/migrations/
 cp -rf visibility-migrations/ $RPM_BUILD_ROOT/usr/share/cadence/migrations/
+
 %clean
 rm -rf $RPM_BUILD_ROOT
-
-%files
-/usr/bin/cadence
-/usr/bin/cadence-server
-/usr/bin/cadence-sql-tool
-/usr/share/cadence/migrations/
-%config /etc/cadence.yaml
-%config /etc/systemd/system/cadence.service
-
 
 %post
 
